--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div class="section blk" ID="DOCS">
 	<div clas="container">
-		<h2>DOCUMENTOS</h2>
+		<h2>DOCUMENTOS DE LEY</h2>
 	</div>
 	
 	<div class="doc-container">
@@ -66,7 +66,7 @@
 
 		<div class="col-md-8">
 
-			<h2>LEY ACTUAL</h2>
+			<h2>LEY VIGENTE</h2>
 			<h3>PREGUNTAS FRECUENTES</h3>
 			<h4>¿Dónde está prohibido fumar?</h4>
 
@@ -107,7 +107,7 @@
 
 		<div class="col-md-8">
 
-			<h2>NUEVO PROYECTO DE LEY</h2>
+			<h2>PROYECTO DE LEY</h2>
 			<h3>PUNTOS IMPORTANTES</h3>
 		<ul>
 			<li><p>Prohibiría la existencia de máquinas expendedoras de tabaco.</p></li>
@@ -140,6 +140,7 @@
 <div class="section gr" ID="OPINION">
 
 	<div class="container">
+		<h2>OPINIÓN</h2>
 			<p>***</p>
 	</div>
 	
@@ -151,9 +152,9 @@
 
 <footer>
 	<ul>
-		<li><a href="#">BIBLIOTECA NACIONAL</a>
-		<li><a href="#">FUMADORES FURIOSOS</a>
-		<li><a href="#">CHILE SIN TABACO</a>
+		<li><a target="_blank" href="http://www.bibliotecanacional.cl/Vistas_Publicas/publicHome/homePublic.aspx?idInstitucion=68">BIBLIOTECA NACIONAL</a>
+		<li><a target="_blank" href="https://twitter.com/Fuma_Furiosos">FUMADORES FURIOSOS</a>
+		<li><a target="_blank" href="http://www.chilelibredetabaco.cl/">CHILE LIBRE DE TABACO</a>
 	</ul>
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="dropdown.js"></script>
