--- a/index.html
+++ b/index.html
@@ -62,37 +62,73 @@
 
 	<div class="container">
 
-		<div class="col-md-2"></div>
+		
 
-		<div class="col-md-8">
-
-			<h2>LEY VIGENTE</h2>
+			<h2>LEY ACTUAL</h2>
 			<h3>PREGUNTAS FRECUENTES</h3>
+
+			<img src="img/icono cigarro-05.png"/>
 			<h4>¿Dónde está prohibido fumar?</h4>
 
 			<p>En bares, pubs, discotecas, restaurantes y casinos de juego (se termina con los antiguos espacios para fumadores) En hoteles (sólo en lugares al aire libre, pero no en las habitaciones ni en lugares comunes cerrados) En centros comerciales (sólo en patios exteriores o espacios abiertos) En taxis, colectivos o buses. En las universidades o centros de educación superior (salvo en los espacios destinados para ello como patios o al aire libre) En hospitales y clínicas (sólo en patios o espacios al aire libre). De igual manera, si una persona arrienda un salón para un evento como matrimonios o fiestas de cumpleaños, no está permitido fumar en dicho recinto si se trata de un espacio cerrado. Si la actividad se realiza en una casa particular, sí es posible fumar.</p>
 
+			<hr>
+
+			<img src="img/icono cigarro-04.png"/>
 			<h4>¿Dónde se puede fumar?</h4>
 
 			<p>Las prohibiciones que establece la nueva Ley del Tabaco apuntan a resguardar el derecho de los no fumadores a estar en ambientes libres de humo de cigarro, por lo que se remiten principalmente a espacios cerrados de uso público o comercial colectivo. Esto significa que los lugares abiertos con libre circulación de aire, así como también los recintos privados no tendrán limitaciones para los fumadores. Algunos casos de espacios en que sí se puede fumar: En espacios con quitasoles no adosados al muro En espacios cubiertos por un techo separado de las paredes En residencias particulares. En playas y piscinas (salvo en las piscinas cerradas). En edificios, condominios o plazas de juegos de niños de estas comunidades (sólo en los espacios abiertos, aunque la comunidad puede prohibir por reglamento interno el consumo de tabaco en el recinto). En los automóviles particulares. En las cárceles.</p>
 
+			<hr>
+
+			<img src="img/icono cigarro-05.png"/>
 			<h4>¿Quién fiscaliza el cumplimiento de la ley?</h4>
 
 			<p>Las Seremis de Salud y los inspectores municipales, quienes deben denunciar lo que constaten ante los Juzgados de Policía Local, quienes en definitiva aplican la sanción. No obstante lo anterior, es fundamental el control ciudadano para el adecuado cumplimiento de la ley.</p>
 
+			<hr>
+
+			<img src="img/icono cigarro-05.png"/>
 			<h4>¿Cuál es la multa para una persona que es sorprendida fumandoen un lugar prohibido?</h4>
 
-			<p>2 UTM, equivalentes a 80.000 pesos.</p>
+			<p>2 UTM, equivalentes a 80.000 pesos.</p><div style="margin-right:auto; padding-bottom:100px;"></div>
 
+			<hr>
+
+			<img src="img/icono cigarro-04.png"/>
 			<h4>¿Puedes habilitarse espacios para fumadores en establecimientos de salud y en dependencuas de órganos del estado?</h4>
 
 			<p>Cuando existan espacios al aire libre o patios, se deberán habilitar lugares especiales para fumadores en áreas claramente delimitadas. Pero el director o administrador de la entidad puede determinar la prohibición total de fumar en todos los espacios.</p>
+
+			<hr>
+
+			<img src="img/icono cigarro-05.png"/>
 
 			<h4>¿Se puede fumar en los estadios?</h4>
 
 			<p>No se puede fumar en las galerías, tribunas y otras aposentadurías destinadas al público en los recintos deportivos, gimnasios o estadios. Esta prohibición se extiende a la cancha y a toda el área comprendida en el perímetro conformado por dichas galerías, tribunas y aposentadurías, salvo en los lugares especialmente habilitados para fumar que podrán tener los mencionados recintos.</p>
 
-		</div>
+			<hr>
+
+			<h4>¿Cuan de acuerdo está con la implementación de la ley Anti-tabaco?</h4>
+
+			<div class="row">
+
+				<div class="percent">
+					<img src="img/grafico circulo-03.png"/>
+					<p>De acuerdo</p>
+				</div>
+				<div class="percent">
+					<img src="img/grafico circulo-01.png"/>
+					<p>En desacuerdo</p>
+				</div>
+				<div class="percent">
+					<img src="img/grafico circulo-02.png"/>
+					<p>Ni de acuerdo ni en desacuerdo</p>
+				</div>
+
+			</div>
+
 
 	</div>
 
@@ -103,20 +139,17 @@
 
 	<div class="container">
 
-		<div class="col-md-2"></div>
-
-		<div class="col-md-8">
-
-			<h2>PROYECTO DE LEY</h2>
+			<h2>NUEVO PROYECTO DE LEY</h2>
 			<h3>PUNTOS IMPORTANTES</h3>
+
+			<img src="img/segundo icono-08.png"/>
+
+			<h4>PROHIBICIONES</h4>
+
 		<ul>
 			<li><p>Prohibiría la existencia de máquinas expendedoras de tabaco.</p></li>
 
-			<li><p>Sancionaría la venta de este producto a menores con presión en su grado medio (entre 21 y 40 días) y multa de entre 3 y 10 UTM (entre 42 mil 178 pesos y 421 mil 780 pesos). Además se podría clausurar el lugar donde se produjo la venta entre uno y tres meses.</p></li>
-
 			<li><p>Prohibiría la fabricación de juegos y golosinas con forma de cigarrillo.</p></li>
-
-			<li><p>Regularía la publicidad de tabaco, en cuanto a establecer que el 100% de la cajetilla debe exhibir el mensaje de advertencia que asegura que el consumo de este producto es dañino para la salud.</p></li>
 
 			<li><p>Prohibiría que las tabacaleras puedan tapar dicha advertencia tanto en el exterior como en el interior de la cajetilla.</p></li>
 
@@ -127,12 +160,29 @@
 			<li><p>Prohibiría fumar en estadios; áreas silvestres protegidas, plazas y lugares de recreación destinados a menores; y al interior de vehículos, sobre todo si se transportan niños.</p></li>
 
 			<li><p>Prohibiría que menores puedan ingresar a lugares especialmente habilitados para fumadores.</p></li>
+		</ul>
+
+			<img src="img/segundo icono-08.png"/>
+
+			<h4>SANCIONES</h4>
+
+		<ul>		
+
+			<li><p>Sancionaría la venta de este producto a menores con presión en su grado medio (entre 21 y 40 días) y multa de entre 3 y 10 UTM (entre 42 mil 178 pesos y 421 mil 780 pesos). Además se podría clausurar el lugar donde se produjo la venta entre uno y tres meses.</p></li>
+		</ul>
+
+			<img src="img/segundo icono-08.png"/>
+
+			<h4>REGULACIONES</h4>
+
+		<ul>
 
 			<li><p>Traspasaría de los Juzgados de Policía Local a las Secretarías Regionales Ministeriales (Seremis) de Salud, la fiscalización de la norma.</p></li>
 
 			<li><p>Establecería que estas compañías deberán responder solidaria y objetivamente por los efectos que ocasiona en la salud el sobre consumo de tabaco. Así tanto el Estado como particulares podrían demandar.</p></li>
+
+			<li><p>Regularía la publicidad de tabaco, en cuanto a establecer que el 100% de la cajetilla debe exhibir el mensaje de advertencia que asegura que el consumo de este producto es dañino para la salud.</p></li>
 		</ul>
-			</div>
 	</div>
 
 </div>
@@ -140,8 +190,45 @@
 <div class="section gr" ID="OPINION">
 
 	<div class="container">
-		<h2>OPINIÓN</h2>
-			<p>***</p>
+	<h2>OPINIÓN</h2>
+
+	<h3>A FAVOR</h3>
+		<div class="fav">
+			<img src="img/iconos text-01.png"/>
+			<p>“El 88% apoya aumentar los impuestos al tabaco como una medida efectiva para disminuir el consumo de cigarrillos entre los jóvenes, y al mismo tiempo un 82% de los encuestados respalda la iniciativa para recaudar fondos para la Reforma Educacional, según un estudio dado a conocer esta mañana por la Organización Panamericana de la Salud (OPS), Chile Libre de Tabaco y el Frente por un Reforma Tributaria Saludable.”</p>
+
+			<div class="sign">- <a target="_blank" href="http://www.chilelibredetabaco.cl">chilelibredetabaco.cl</a></div>
+			<img src="img/iconos text-02.png"/>
+			<p>“Nosotros estamos absolutamente, no sólo de acuerdo, sino que hemos trabajado en conjunto con los parlamentarios para poder avanzar en esta Ley del tabaco que de verdad se haga cargo de los temas y las medidas que demuestran ser efectivas. Los fumadores en la edad escolar son los que nos preocupan fundamentalmente, tienen un inicio precoz del tabaquismo, que habitualmente se asocia al tabaquismo crónico” </p>
+			<div class="sign">- Helia Molina, Ministra de salud</div>
+			<img src="img/iconos text-03.png"/>
+			<p>“Es una de las causas que lleva a producir más adicción principalmente en las mujeres y mayor consumo de tabaco en los jóvenes, ya que es más atractivo fumar un cigarro con gusto a menta que sin gusto, le quita lo irritativo y mal gusto que queda en la boca, siendo un incentivo. Por eso es necesario eliminar el mentol como aditivo en el cigarro que sólo, como dice la evidencia científica, atrasa o disminuye la posibilidad de que una persona deje de fumar”.</p>
+			<div class="sign">- Lidia Amarales, directora de SENDA</div>
+			<img src="img/iconos text-04.png"/>
+			<p>“Es posible castigar, de manera que la tributación compense equilibradamente los daños que el tabaco causa. Hay un margen en Chile bastante alto a diferencia de otros países de América del Sur donde tenemos índices de contrabando muchas veces superiores al comercio lícito y en Chile es menos de un 3 por ciento” aseveró.</p>
+			<div class="sign">- Alejandro Guillier, Senador</div>
+
+		</div>
+
+		<h3>EN CONTRA</h3>
+		<div class="con">
+			<img src="img/iconos text-05.png"/>
+			<p>En relación a la petición por parte de algunas agrupaciones, en la que se solicita que se declare ilegal el Manual para la Fiscalización de la Ley de Tabaco Nº 19.419, (Modificada por la Ley Nº 20.660). Las medidas contenidas en este manual, son claramente abusivas en términos de discriminación a los fumadores, sostener que este instructivo deja “la posibilidad a los distintos lugares públicos en convertir una terraza en lugar para fumadores”, es un ataque directo a la libertad de elección de este grupo social y atenta sobre el principio de toda sociedad, que es la coexistencia.</p>
+			<div class="sign">- <a target="_blank" href="http://www.quieroelegir.cl/ley-de-tabaco-por-que-estan-furiosos-los-fumadores/">quieroelegir.cl</a></div>
+
+			<img src="img/iconos text-06.png"/>
+			<p>“Siento que somos fumadores, pero tenemos criterio. No tienen por qué coartar la libertad de fumar y nuestras decisiones en lugares en donde podemos hacerlos, como un parque o una plaza, donde van a haber niños. Podemos tener el criterio de no fumar al lado de personas donde no corresponde”</p>
+			<div class="sign">- Carolina Yáñez, vocera de fumadores furiosos</div>
+
+			<img src="img/iconos text-07.png"/>
+			<p>“Hasta cuando tantas restricciones,mejor ocupen el tiempo en cosas mas importantes. Como x ej ayudar a las personas q si lo necesitan,yo soy un adulto y m enseñaron lo q es bueno y malo se supone q estoy en un pais donde puedo elegir... La DICTADURA ya paso,asi q a fumarse un cigarrito con libertad.”</p>
+			<div class="sign">- Erik O. Opinión en fumadores furiosos</div>
+
+			<img src="img/iconos text-08.png"/>
+			<p>“El cigarrillos hace daño, pero más daño le hacen los politicos a la formación de las personas, ya que uno dice que algo está malo y el de oposición dice que está bueno.. eso es hacer daño...porque no trabajan tranquilos, callados y construyen para el bien de sus electores? Cada día nos quitan derechos!!!!”</p>
+			<div class="sign">- Mario A. Opinión en fumadores furiosos</div>
+
+		</div>
 	</div>
 	
 
@@ -152,9 +239,9 @@
 
 <footer>
 	<ul>
-		<li><a target="_blank" href="http://www.bibliotecanacional.cl/Vistas_Publicas/publicHome/homePublic.aspx?idInstitucion=68">BIBLIOTECA NACIONAL</a>
-		<li><a target="_blank" href="https://twitter.com/Fuma_Furiosos">FUMADORES FURIOSOS</a>
-		<li><a target="_blank" href="http://www.chilelibredetabaco.cl/">CHILE LIBRE DE TABACO</a>
+		<li><a href="#">BIBLIOTECA NACIONAL</a>
+		<li><a href="#">FUMADORES FURIOSOS</a>
+		<li><a href="#">CHILE SIN TABACO</a>
 	</ul>
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="dropdown.js"></script>
