--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
 	
 	<div class="doc-container">
 		<div ID="DOC1" class="col-2">
+				<a href="#">
 				<img src="img/pdf-blue.png"/>
-				<p>Ley no. 19.419 Control y disminución del tabaquismo.</p>
+				Ley no. 19.419 Control y disminución del tabaquismo.</a>
 		</div>
 		<div ID="DOC2" class="col-2">
+				<a href="#">
 				<img src="img/pdf-blue.png"/>
-				<p>Proyecto de Ley no. 20.660, modifica ley no. 19.419 en materia de ambientes libres de humo de tabaco.</p>
+				Proyecto de Ley no. 20.660, modifica ley no. 19.419 en materia de ambientes libres de humo de tabaco.</a>
 		</div>
 	</div>
 	
