--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 		
 
-			<h2>LEY ACTUAL</h2>
+			<h2>LEY VIGENTE</h2>
 			<h3>PREGUNTAS FRECUENTES</h3>
 
 			<img src="img/icono cigarro-05.png"/>
@@ -141,7 +141,7 @@
 
 	<div class="container">
 
-			<h2>NUEVO PROYECTO DE LEY</h2>
+			<h2>PROYECTO DE LEY</h2>
 			<h3>PUNTOS IMPORTANTES</h3>
 
 			<img src="img/segundo icono-08.png"/>
